--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,21 @@
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
 http://maven.apache.org/xsd/maven-4.0.0.xsd">
- 
 <modelVersion>4.0.0</modelVersion>
 <groupId>com.example</groupId>
 <artifactId>maven-demo</artifactId>
 <packaging>jar</packaging>
 <version>1.0-SNAPSHOT</version>
 <name>maven-demo</name>
-http://maven.apache.org</url>
+<url>http://maven.apache.org</url>
  
-<properties>
+  <properties>
 <maven.compiler.source>11</maven.compiler.source>
 <maven.compiler.target>11</maven.compiler.target>
 </properties>
  
-<dependencies>
+  <dependencies>
 <dependency>
 <groupId>junit</groupId>
 <artifactId>junit</artifactId>
@@ -24,7 +24,7 @@ http://maven.apache.org</url>
 </dependency>
 </dependencies>
  
-<build>
+  <build>
 <plugins>
 <plugin>
 <groupId>org.apache.maven.plugins</groupId>
@@ -39,3 +39,4 @@ http://maven.apache.org</url>
 </build>
  
 </project>
+ 
